dnl Process this file with autoconf to produce a configure script.
AC_INIT(libwebserver)
AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADER([include/config.h])
AC_CANONICAL_SYSTEM # for target_os


openssl="disabled"
debug="disabled"
#VERSION="libwebserver v`pwd |sed \"s/^.*libwebserver\/\\(.*\\)$/\1/\"`"
#RELEASE="`pwd |sed \"s/^.*libwebserver-\\(.*\\)$/\1/\"`";
VERSION="libwebserver 0.53-RE"
RELEASE="0.53-RE"


dnl Checks for programs.
CFLAGS="";
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_MINGW32

case "$target_os" in 
darwin*)
	AC_MSG_NOTICE([configuring for Mac OS/X])
	MACOSX=yes
	;;
esac


if test "$MINGW32" = yes; then
  AC_DEFINE(HAVE_MINGW32,1)
fi

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netinet/in.h stddef.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])

# Arguments --with-openssl --debug
AC_ARG_WITH(openssl, [ --with-openssl=/opensslsrcdir], 
[
	AC_DEFINE(HAVE_OPENSSL,1)	
	
	INCLUDE="$INCLUDE -I$withval/include"
	LIBDIR="$LIBDIR -L$withval"
	LIBS="$LIBS -lssl -lcrypto"
	OPENSSLDIR="$withval"
	VERSION="$VERSION (openssl)"

	openssl="$withval"
])
AC_ARG_ENABLE(debug, [ --enable-debug], 
[ 
AC_DEFINE(DEBUG,1)
CFLAGS="$CFLAGS -g"
debug="enabled"
VERSION="$VERSION (debug)"
 ])
dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([inet_ntoa memset select socket strchr strerror strncasecmp strstr strtol])

AC_SUBST(INCLUDE)
AC_SUBST(LIBDIR)
AC_SUBST(LIBS)
AC_SUBST(OPENSSLDIR)
AC_SUBST(VERSION)
AC_SUBST(RELEASE)
AC_SUBST(MINGW32)
AC_SUBST(MACOSX, $MACOSX)

AC_CONFIG_FILES([Makefile src/Makefile examples/Makefile help/Makefile libwebserver-config])
AC_OUTPUT
chmod +x libwebserver-config; 

cat<<EOF

------------------------------
$VERSION by Luis Figueiredo (stdio@netc.pt)

	openssl=$openssl
	debug=$debug
	prefix=$prefix
------------------------------

EOF
